adding a create method

--- a/WebSearchWithElasticsearchNestedDocuments/Views/Search/SearchCreate.cshtml
+++ b/WebSearchWithElasticsearchNestedDocuments/Views/Search/SearchCreate.cshtml
@@ -41,7 +41,7 @@
                 <tr>
                     <td colspan="2">
                         <div id="createtableskilldetails" />
-                        <input id="updateSkillDetailsList" name="updateSkillDetailsList" type="hidden" />
+                        <input id="createSkillDetailsList" name="createSkillDetailsList" type="hidden" />
                     </td>
                 </tr>
                 <tr>
