--- a/WebSearchWithElasticsearchNestedDocuments/Views/Search/SearchUpdate.cshtml
+++ b/WebSearchWithElasticsearchNestedDocuments/Views/Search/SearchUpdate.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WebSearchWithElasticsearchNestedDocuments.Search.SkillWithListOfDetails
 <div id="updateForm">
-    <form action="update" method="post">
+    <form action="http://localhost:50227/search/update" method="post">
         <fieldset class="form">
             <legend>UPDATE an existing document in the search engine</legend>
             <table width="800">
